# Flight-Plan-Web-App-2

./: .replit  COLI by Location.csv  LICENSE  Occupational Data.csv  README.md  aggregated_irs_data.csv  app.py  check_columns.py  config.py  index.html  main.py  pyproject.toml  requirements.txt  sample_data.csv  test_csv.py  test_flask.py  test_http.py  test_server.py  validate_credentials.py
.streamlit/: config.toml
attached_assets/: BLS OEWS.csv  Pasted-An-unexpected-error-occurred-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Layout-1742388543711.txt  Pasted-Application-error-Cannot-hash-argument-collection-ref-of-type-google-cloud-firestore-v1-collecti-1741974866342.txt  Pasted-Educational-Institutions-Explorer-Firebase-initialized-successfully-for-project-flight-plan-web-Co-1741973260807.txt  Pasted-Error-fetching-salary-data-Invalid-property-specified-for-object-of-type-plotly-graph-objs-heatmap--1741827637159.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-remove-1741828842800.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-self-of-type-se-1741817866081.txt
components/: timeline_component.py  ui_components.py
models/: __init__.py  database.py  financial_calculator.py  financial_models.py  gamification.py  milestone_factory.py  tax_calculator.py  user_favorites.py
pages/: 1_Career_Salary_Projections.py  2_Student_Loan_Calculator.py  3_ROI_Analysis.py  4_Cost_Comparison.py  career_discovery.py  career_exploration.py  career_suggestions.py  (+8 more)
(+21 files in other folders)
